# libcommunicator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
bindings/go/: Makefile  README.md
bindings/go/examples/mattermost_demo/: go.mod  main.go
bindings/go/examples/preferences_demo/: go.mod  main.go
bindings/go/examples/simple_bot/: go.mod  main.go
bindings/go/examples/threads_demo/: go.mod  main.go
bindings/go/libcommunicator/: communicator.go  context.go  events.go  files.go  go.mod  platform.go  preferences.go  search.go  types.go
examples/: Makefile  ffi_patterns_demo.c  mattermost_demo.c  version_example.c
include/: communicator.h
src/: context.rs  error.rs  lib.rs  runtime.rs
src/types/: capabilities.rs  channel.rs  connection.rs  emoji.rs  message.rs  mod.rs  team.rs  user.rs
