[package]
name = "libcommunicator"
version = "0.1.0"
edition = "2021"

[lib]
name = "communicator"
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
