[package]
name = "libcommunicator"
version = "0.1.0"
edition = "2021"

[lib]
name = "communicator"
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock", "std"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots",] }
url = { version = "2.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Profile optimizations for smaller binary size
[profile.release]
# Link Time Optimization - enables cross-crate inlining and dead code elimination
lto = true
# Use a single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1
# Optimize for size rather than speed
opt-level = "z"
# Strip symbols from binary
strip = true
# Enable panic=abort to remove unwinding code
panic = "abort"
